[package]
name = "turnturnturn"
version = "0.1.1"
authors = ["James Prestwich <james@prestwi.ch>"]
edition = "2018"

[dependencies]
coins-core = { path = "../bitcoins-rs/core", default-features = false }
coins-bip32 = { path = "../bitcoins-rs/bip32", default-features = false }
bitcoins = { path = "../bitcoins-rs/bitcoins", default-features = false }
bitcoins-provider = { path = "../bitcoins-rs/provider", default-features = false, features = ["esplora"] }

lazy_static = "1.4.0"
rand = "0.7.3"
serde = "1.0.117"
serde_json = "1.0.59"
hex = "0.4.2"
tokio = {version = "0.2.22", features = ["full"]}
clap = "3.0.0-beta.2"

[features]
default = ["mainnet"]
mainnet = ["coins-bip32/mainnet", "bitcoins/mainnet", "bitcoins-provider/mainnet"]
testnet = ["coins-bip32/testnet", "bitcoins/testnet", "bitcoins-provider/testnet"]
